[project]
name             = "golem"
version          = "0.2.0"
description      = ""
authors          = [{ name = "rami3l", email = "rami3l@outlook.com" }]
dependencies     = []
dev-dependencies = []
requires-python  = ">=3.8"
dynamic          = ["classifiers"]
license          = { text = "MIT" }

[project.urls]
homepage = ""

[tool]
[tool.pdm]

[[tool.pdm.source]]
name       = "pypi"
url        = "https://pypi.org/simple"
verify_ssl = true


[build-system]
requires      = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
